enable reduced data table by selected records for all devices, enablement via context menu
add 230400 Baud entry in device properties XSD to enable workaround for Junsi charger at UNIX operating systems
enable to left cut and right cut permanent
display selected measurement values in comment area while measuring
enable to set record set start time stamp manually
fix digital display for GPS coordinates
update MdlViewer to 0.8
HoTTAdapter* - detect switching into text modus where no readable telemetrie values are available
iCharger*B - fix power calculation
iCharger308Duo - add support to import data from device (actually no support for live data)
Kosmik - fix import problem with modified file name

Version 3.1.5 - 04 May 2014
Update to latest SWT drop due to solved problems reported for Mint-Linux
HoTTAdapter* - synchronize capacity filter
HoTTAdapter2 - fix height curve data if overlayed from different sensors
HoTTAdapter* - optimize import for receiver data only
HoTTAdapter* - update import algorithm to fit log sensor fingerprint of new receivers
HoTTAdapter* - update filter settings speed
UltraDuoPlus50/60 - add step charge configuration tabulator
UltraDuoPlus* - refine several default values depending on capacity as well as on charge current 
VC820/VC840 - fix mapping while resistance measurement
GPS-Logger2 - add support for GPS-Logger2 extended measurement value set from SM-Modellbau
IGCAdapter - update to enable extension data for 4 additional values
Kosmik - fix initialization error
tune auto number formatting 
enable optimized data sets load of DataExplorer for Android saved osd files
enable reduced data table by selected records (actually for HoTTAdapter* only)
remove export capability for IGC files (IGC files must be generated while data creation and secured)
documentation update


Version 3.1.4 - 02 Feb 2014
update build to make sure compiled classes target 1.6